--- a/src/statics/Dashboard.css
+++ b/src/statics/Dashboard.css
@@ -54,7 +54,7 @@ input[type="date"] {
   margin: 20px auto;
   max-width: 100%;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08) !important;
   background-color: #ffffff;
 }
 
